--- a/src/index.html
+++ b/src/index.html
@@ -20,46 +20,46 @@
   </head>
   <body class="page__body">
     <header class="header">
-      <div class="header__image">
-        <a href="#menu" class="header__menu">
-        </a>
-        <a href="#" class="logo">
-          <img
-            class="logo__image"
-            src="images/NA MUlogo.png"
-            alt="logo"
-          >
-        </a>
-      </div>
-      <div class="header__content">
-        <h1 class="header__title">
-          ХУДОЖНІЙ МУЗЕЙ
-        </h1>
-
-        <div class="header__button button">
-          <div class="button__text">
-            КВИТКИ
-          </div>
-          <a href="#events" class="button__field">
+      <div class="header__container">
+        <div class="header__image">
+          <a href="#menu" class="header__menu">
+          </a>
+          <a href="#" class="logo">
             <img
-              src="images/arrow_right.png"
-              alt="green buttom"
-              class="button__action"
+              class="logo__image"
+              src="images/NA MUlogo.png"
+              alt="logo"
             >
           </a>
         </div>
-        <div class="header__events">
-          ПОДІЇ
+        <div class="header__content">
+          <h1 class="header__title">
+            ХУДОЖНІЙ МУЗЕЙ
+          </h1>
+
+          <div class="header__button button">
+            <div class="button__text">
+              КВИТКИ
+            </div>
+            <a href="#events" class="button__field">
+              <img
+                src="images/arrow_right.png"
+                alt="green buttom"
+                class="button__action"
+              >
+            </a>
+          </div>
+          <div class="header__events">
+            ПОДІЇ
+          </div>
         </div>
       </div>
-
     </header>
-
     <nav class="menu page__menu" id="menu">
       <div class="container">
         <div class="menu__content">
           <div class="menu__top">
-            <a href="#" class="icon header__cross">
+            <a href="#" class="icon header__cross menu__cross">
             </a>
             <a href="#" class="logo logo__menu">
               <img src="images/NA MUlogo.png" alt="logo">
@@ -280,31 +280,34 @@
       </section>
 
       <section class="page__section subscribe" id="subscribe">
-        <div class="subscribe__container">
-          <h2 class="subscribe__title">
-            Підписка
-          </h2>
-          <p class="subscribe__subtitle">
-            Бути в курсі всіх актуальних подій та останніх новин.
-          </p>
-          <form
-            class="subscribe__form"
-            action="#"
-            id="form-subscribe"
-          >
-            <label class="subscribe__content">
-              <input
-                id="input"
-                name="email"
-                placeholder="E-mail"
-                class="subscribe__text"
-                type="email"
-                required
-              >
-              <button type="submit" class="subscribe__button"></button>
-            </label>
-          </form>
+        <div class="container container-wide">
+          <div class="subscribe__container">
+            <h2 class="subscribe__title">
+              Підписка
+            </h2>
+            <p class="subscribe__subtitle">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form
+              class="subscribe__form"
+              action="#"
+              id="form-subscribe"
+            >
+              <label class="subscribe__content">
+                <input
+                  id="input"
+                  name="email"
+                  placeholder="E-mail"
+                  class="subscribe__text"
+                  type="email"
+                  required
+                >
+                <button type="submit" class="subscribe__button"></button>
+              </label>
+            </form>
+          </div>
         </div>
+
       </section>
     </main>
 
@@ -450,22 +453,25 @@
           </div>
         </div>
       </div>
-      <div class="namu">
-        <a
-          target="_blank"
-          href="https://www.behance.net/zhyriadatmar"
-          class="namu__designer"
-        >
-          Designed by Zhyriada Marina
-        </a>
-        <a
-          target="_blank"
-          href="https://www.legalzoom.com/articles/the-term-all-rights-reserved-explained#:~:text=This%20means%20that%20no%20one,permission%2C%20the%20statement%20is%20redundant."
-          class="namu__designer"
-        >
-          Copyright © 2019. All Rights Reserved.
-        </a>
+      <div class="container">
+        <div class="namu">
+          <a
+            target="_blank"
+            href="https://www.behance.net/zhyriadatmar"
+            class="namu__designer"
+          >
+            Designed by Zhyriada Marina
+          </a>
+          <a
+            target="_blank"
+            href="https://www.legalzoom.com/articles/the-term-all-rights-reserved-explained#:~:text=This%20means%20that%20no%20one,permission%2C%20the%20statement%20is%20redundant."
+            class="namu__designer"
+          >
+            Copyright © 2019. All Rights Reserved.
+          </a>
+        </div>
       </div>
+
 
     </footer>
 
