--- a/src/index.html
+++ b/src/index.html
@@ -3,95 +3,117 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-
   <body class="page__body">
     <header class="header page__header" id="about-us">
-      <div class="container">
-        <div class="header__content">
-          <div class="header__img-box">
-            <div class="header__nav">
-              <a href="#menu" class="header__menu-icon">
-                <img src="/images/icons/menu.svg" alt="Menu">
-              </a>
+      <div class="header__content">
+        <div class="header__img-box">
+          <div class="header__nav">
+            <a href="#menu" class="header__menu-icon">
+              <img src="/images/icons/menu.svg" alt="Menu">
+            </a>
 
-              <a href="/" class="header__menu-logo">
-                <img
-                  class="logo__img"
-                  src="/images/icons/NA MU.svg"
-                  alt="logo">
-              </a>
-            </div>
-          </div>
-
-          <div class="header__text-block">
-            <h1 class="header__title">художній <br> музей</h1>
-
-            <div class="header__tickets">
-              <a href="#contacts" class="header__tickets-button">
-                <p class="header__tickets-button-text">квитки</p>
-              </a>
-              <a href="#contacts" class="header__tickets-link">
-                <img
-                  class="header__tickets-link-img"
-                  src="/images/icons/tickets-go.svg"
-                  alt="Tickets Go">
-              </a>
-            </div>
-          </div>
-
-          <div class="header__events">
-            <div class="header__events-line"></div>
-            <p class="header__events-text">події</p>
+            <a href="#" class="header__menu-logo">
+              <img
+                class="logo__img"
+                src="/images/icons/NA MU.svg"
+                alt="logo">
+            </a>
           </div>
         </div>
 
+        <div class="header__text-block">
+          <h1 class="header__title">художній <br> музей</h1>
+
+          <div class="header__tickets">
+            <a
+              href="#contacts"
+              class="header__tickets-button"
+              target="_blank"
+            >
+              <p class="header__tickets-button-text">квитки</p>
+            </a>
+            <a
+              href="#contacts"
+              class="header__tickets-link"
+              target="_blank"
+            >
+              <img
+                class="header__tickets-link-img"
+                src="/images/icons/tickets-go.svg"
+                alt="Tickets Go">
+            </a>
+          </div>
+        </div>
+
+        <div class="header__events">
+          <div class="header__events-line"></div>
+          <p class="header__events-text">події</p>
+        </div>
       </div>
     </header>
 
     <nav class="page__menu menu" id="menu">
-      <div class="container">
-        <div class="menu__content">
-          <div href="/" class="menu__icons">
-            <a href="#" class="menu__icon--cross">
-              <img src="/images/icons/cross.svg" alt="exit">
-            </a>
-          </div>
+      <div class="menu__content">
+        <div href="/" class="menu__icons">
+          <a href="#" class="menu__icon--cross">
+            <img src="/images/icons/cross.svg" alt="exit">
+          </a>
+        </div>
 
-          <ul class="menu__list">
-            <li class="menu__item">
-              <a href="#" class="menu__link">Головна</a>
-            </li>
-            <li class="menu__item">
-              <a href="#about-us" class="menu__link">Вистави та події</a>
-            </li>
-            <li class="menu__item">
-              <a href="#now-on-view" class="menu__link">Галерея</a>
-            </li>
-            <li class="menu__item">
-              <a href="#explore-online" class="menu__link">Приєднатись до нас</a>
-            </li>
-            <li class="menu__item">
-              <a href="#contacts" class="menu__link">Контакти</a>
-            </li>
-          </ul>
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a
+              href="#"
+              class="menu__link">
+              Головна
+            </a>
+          </li>
+          <li class="menu__item">
+            <a
+              href="#about-us"
+              class="menu__link">
+              Вистави та події
+            </a>
+          </li>
+          <li class="menu__item">
+            <a
+              href="#now-on-view"
+              class="menu__link">
+              Галерея
+            </a>
+          </li>
+          <li class="menu__item">
+            <a
+              href="#subscription"
+              class="menu__link">
+              Приєднатись до нас
+            </a>
+          </li>
+          <li class="menu__item">
+            <a
+              href="#contacts"
+              class="menu__link">
+              Контакти
+            </a>
+          </li>
+        </ul>
 
-          <div class="menu__add-block">
-            <a
-              href="tel:+1 212-535-7710"
-              class="menu__call menu__add--info">
-              Телефон: +1 212-535-7710
-            </a>
-            <a
-              href="#events"
-              class="menu__call menu__add--info">
-              Придбати квиток
-            </a>
-          </div>
+        <div class="menu__add-block">
+          <a
+            href="tel: +1 212-535-7710"
+            class="menu__call menu__add--info">
+            Телефон: +1 212-535-7710
+          </a>
+          <a
+            href="#events"
+            class="menu__call menu__add--info">
+            Придбати квиток
+          </a>
         </div>
       </div>
     </nav>
@@ -108,7 +130,8 @@
                 <img
                   class="event__img"
                   src="/images/current-events.jpg"
-                  alt="current-events">
+                  alt="current-events"
+                  target="_blank">
               </div>
 
               <div class="event__info event__info--first">
@@ -132,7 +155,8 @@
                 <img
                   class="event__img"
                   src="/images/current-events2.jpg"
-                  alt="current-events">
+                  alt="current-events"
+                  target="_blank">
               </div>
 
               <div class="event__info event__info--second">
@@ -150,27 +174,27 @@
                 <p class="event__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
               </div>
             </div>
-
-            <div class="container">
-              <div class="events__item events__item--bottom">
-                <div class="event__bottom-image events__photo--bottom">
-                  <div class="event__info event__info--bottom">
-                    <div class="event__box event__box--bottom">
-                      <p class="event__type">лекція</p>
-                      <p class="event__date">26/08/2019 - 11:00</p>
-                    </div>
-                    <h3 class="event__title">
-                      <a hhref="#" class="event__link">
-                        Від класицизму до романтизму
-                      </a>
-                    </h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-
           </div>
         </div>
+        <div class="events__item events__item--bottom">
+          <div class="event__bottom-image">
+            <div class="container">
+              <div class="event__info event__info--bottom">
+                <div class="event__box event__box--bottom">
+                  <p class="event__type">лекція</p>
+                  <p class="event__date">26/08/2019 - 11:00</p>
+                </div>
+                <h3 class="event__title">
+                  <a hhref="#" class="event__link">
+                    Від класицизму до романтизму
+                  </a>
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
       </section>
 
 
@@ -182,24 +206,28 @@
             <img
             class="gallery__image"
             src="/images/gallery1.jpg"
-            alt="gallery">
+            alt="gallery"
+            target="_blank">
 
             <img
             class="gallery__image"
             src="/images/gallery2.jpg"
-            alt="gallery">
+            alt="gallery"
+            target="_blank">
           </div>
 
           <div class="gallery__second">
             <img
             class="gallery__image"
             src="/images/gallery3.jpg"
-            alt="gallery">
+            alt="gallery"
+            target="_blank">
 
             <img
             class="gallery__image"
             src="/images/gallery4.jpg"
-            alt="gallery">
+            alt="gallery"
+            target="_blank">
           </div>
         </div>
       </section>
@@ -246,30 +274,27 @@
       </section>
     </main>
 
-    <div class="container">
-      <div class="sub">
-        <div class="subscription" id="subscription">
-          <div class="subscription__picture"></div>
-          <p class="subscription__title">Підписка</p>
-          <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+    <div class="subscription" id="subscription">
+      <div class="container">
+        <p class="subscription__title">Підписка</p>
+        <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
-          <div class="subscription__input">
-            <form action="/" class="subscription__form">
-              <input
-                class="subscription__email"
-                type="text"
-                name="text"
-                id="email"
-                placeholder="E-mail"
-              >
-              <button type="submit" class="subscription__icon">
-                <img
-                  class="subscription__icon-pic"
-                  src="/images/icons/go.svg"
-                  alt="go">
-              </button>
-            </form>
-          </div>
+        <div class="subscription__input">
+          <form action="/" class="subscription__form">
+            <input
+              class="subscription__email"
+              type="text"
+              name="text"
+              id="email"
+              placeholder="E-mail"
+            >
+            <button type="submit" class="subscription__icon">
+              <img
+                class="subscription__icon-pic"
+                src="/images/icons/go.svg"
+                alt="go">
+            </button>
+          </form>
         </div>
       </div>
     </div>
@@ -281,7 +306,7 @@
           <div class="footer__information">
             <div class="footer__top">
 
-              <a href="/" class="footer__logo">
+              <a href="#" class="footer__logo">
                 <img
                   class="logo__img"
                   src="/images/icons/NA MU.svg"
@@ -337,7 +362,7 @@
                   </div>
                 </div>
                 <div class="info__box">
-                  <h3 class="info__title" id="contact">Контакти:</h3>
+                  <h3 class="info__title" id="contacts">Контакти:</h3>
                   <div class="info__text">
                     <a
                       class="info__link"
@@ -345,10 +370,28 @@
                       target="_blank"
                     >
                     вул. М. Грушевського, 6; Київ, 01001
-                    </a>
-                    <a class="info__link" href="+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
-                    <a class="info__link" href="+38 (044) 278-74-54">факс +38 (044) 278-74-54</a>
-                    <a class="info__link" href="e-mail: info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+                    </a> <br>
+                    <a
+                      class="info__link"
+                      href="tel: +38 (044) 278-13-57"
+                      target="_blank"
+                    >
+                      тел. +38 (044) 278-13-57
+                    </a> <br>
+                    <a
+                      class="info__link"
+                      href="tel: +38 (044) 278-74-54"
+                      target="_blank"
+                    >
+                        факс +38 (044) 278-74-54
+                    </a> <br>
+                    <a
+                      class="info__link"
+                      href="mail: info@namu.kiev.ua"
+                      target="_blank"
+                    >
+                      e-mail: info@namu.kiev.ua
+                    </a> <br>
                   </div>
                 </div>
               </div>
