--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
   <!DOCTYPE html>
-<html lang="Ukr">
+<html lang="Ukr" class=" page page_body--with-menu">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -58,13 +58,17 @@
           <p href="#" class="header__button--fake-button">
             Квитки
           </p>
-          <button
-            name="ticket"
+          <a
+            href="https://shorturl.at/kloz2"
+            target="_blank"
             class="header__button--real-button"
-            type="button"
           >
-            <img src="./images/icons/Vector-for-button.png" alt="button icon">
-          </button>
+            <img
+              src="./images/icons/Vector-for-button.png"
+              alt="button icon"
+              class="header__button--real-button-image"
+              >
+          </a>
         </div>
 
       </div>
@@ -247,6 +251,7 @@
             type="email"
             placeholder="email"
             class="content__subscription--form-input"
+            required
           >
             <button class="content__subscription--form-button">
               <img src="./images/icons/Vector-for-button.png" alt="button icon">
@@ -270,7 +275,11 @@
             class="footer__icons--socialMedia-facebook"
             target="_blank"
           >
-            <img src="./images/icons/Facebook.png" alt="facebook icon">
+            <img
+              src="./images/icons/Facebook.png"
+              alt="facebook icon"
+              class="footer__icons--socialMedia-facebook-image"
+            >
           </a>
 
           <a
@@ -278,7 +287,11 @@
             class="footer__icons--socialMedia-instagram"
             target="_blank"
             >
-            <img src="./images/icons/instagram.png" alt="instagram icon">
+            <img
+              src="./images/icons/instagram.png"
+              alt="instagram icon"
+              class="footer__icons--socialMedia-instagram-image"
+            >
           </a>
         </div>
       </div>
@@ -314,15 +327,33 @@
           </p>
 
           <p>
-            вул. М. <br>
-            Грушевського, 6; <br>
-            Київ, 01001 <br>
-            тел. +38 (044) <br>
-            278-13-57 <br>
+            <a
+              href="https://goo.gl/maps/QEAhQvKFUc6x8iYdA"
+              target="_blank"
+              class="footer__about--items-adress"
+            >
+              вул. М. <br>
+              Грушевського, 6; <br>
+              Київ, 01001 <br>
+            </a>
+            <a
+              href="tel:+380442781357"
+              target="_blank"
+              class="footer__about--items-tel"
+            >
+              тел. +38 (044) <br>
+              278-13-57 <br>
+            </a>
             факс +38 (044) <br>
             278-74-54 <br>
-            e-mail: <br>
-            info@namu.kiev.ua
+            <a
+              href="https://namumuseum@gmail.com"
+              target="_blank"
+              class="footer__about--items-mail"
+            >
+              e-mail: <br>
+              info@namu.kiev.ua
+            </a>
           </p>
         </div>
 
